# sciter-hellocpp-cmake

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  resources.cpp
ui/: main.htm
